# cargo-features = ["edition2024"]
[package]
name = "unlock"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "unlock"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = {version = "0.31.1", features = ["init-if-needed"]}  ## 30.0
anchor-spl = "0.31.1"                                           ## 30.1
# anyhow = "1.0.100"
#solana-client = "3.0.7"
#solana-commitment-config = "3.0.0"
#solana-sdk = "3.0.0"
#solana-system-interface = "2.0.0"
# tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "macros", "net", "fs"] }
# solana-program = "1.18.17"
